fix(api) : fix import API on Firefox browser
This closes gravitee-io/issues#231

--- a/src/app/api/_api.scss
+++ b/src/app/api/_api.scss
@@ -272,3 +272,13 @@ span.proxy-deactivated {
 .gravitee-general-view-description {
   font-size: 12px;
 }
+
+.gravitee-api-definition-dialog {
+  span {
+    text-transform: uppercase;
+    line-height: 48px;
+  }
+  input[type="file"]{
+    cursor: pointer;
+  }
+}
